k8s/grocery-items-management-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocery-items-management
  namespace: lsefiane-dev
  labels:
    app: grocery-items-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grocery-items-management
  template:
    metadata:
      labels:
        app: grocery-items-management
    spec:
      containers:
        - name: grocery-items-management
          image: docker.io/lsefiane/grocery-items-management:1.0
          imagePullPolicy: Always
          readinessProbe:
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            httpGet:
              scheme: HTTP
              path: /groceryitem/api/actuator/health/readiness
              port: 8080
              httpHeaders:
                - name: Host
                  value: grocery-items-management
          livenessProbe:
            httpGet:
              path: /groceryitem/api/actuator/health/liveness
              port: 8080
              httpHeaders:
                - name: Host
                  value: grocery-items-management
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /groceryitem/api/actuator/health/liveness
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
