k8s/zipkin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: lsefiane-dev
  labels:
    app: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - image: openzipkin/zipkin:latest
          name: zipkin
          ports:
            - containerPort: 9411
