k8s/zipkin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: lsefiane-dev
  labels:
    app: zipkin
spec:
  selector:
    app: zipkin
  ports:
    - name: "9411"
      port: 9411
      targetPort: 9411
  type: ClusterIP
