k8s/grocery-items-management-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grocery-items-management
  namespace: lsefiane-dev
  labels:
    app: grocery-items-management
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: grocery-items-management-lsefiane-dev.apps.sandbox-m4.g2pi.p1.openshiftapps.com
  path: /groceryitem/api/
  to:
    kind: Service
    name: grocery-items-management
    weight: 100
  port:
    targetPort: '8080'
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: grocery-items-management-lsefiane-dev.apps.sandbox-m4.g2pi.p1.openshiftapps.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2024-08-02T16:43:53Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.sandbox-m4.g2pi.p1.openshiftapps.com
